kubernetes-manifests/envs/stg/cors-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kio-api
spec:
  template:
    spec:
      containers:
        - name: kio-api
