kubernetes-manifests/envs/stg/ui-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kio-ui
spec:
  template:
    spec:
      containers:
        - name: kio-ui
