kubernetes-manifests/envs/stg/nodeport-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: kio-api-nodeport
spec:
  ports:
    - name: api
      port: 8000
      targetPort: api
      nodePort: 30801
